--- a/wrr/styles/style.css
+++ b/wrr/styles/style.css
@@ -12,9 +12,16 @@
 }
 body {
     background-color: #FFF3B0;
+    font-family: Arial, Helvetica, sans-serif;
+    margin: 0;
+    padding: 0;
+}
+h2 {
+    margin: 0;
 }
 header {
     background-color: #335C67;
+    font-family: Arial, Helvetica, sans-serif;
 }
 nav a:hover {
     background-color: #540B0E;
@@ -27,16 +34,67 @@ nav a:hover {
 }
 nav a{
     text-decoration: none;
+    padding: 35px;
 }
 .book{
     text-decoration: none;
+    font-size: 18px;
+    padding: 15px 30px;
+    margin-top: 50px;
+    border-radius: 5px;
 }
 .join{
     text-decoration: none;
+    font-size: 18px;
+    padding: 15px 30px;
+    margin-top: 50px;
+    border-radius: 5px;
 }
 footer a{
     text-decoration: none;
 }
 footer p a:hover{
     text-decoration: underline;
+}
+.home-title {
+    font-size: 2em;
+    margin-top: 10px;
+}
+.msg p {
+    font-size: .8em;
+    padding-bottom: 15px;
+}
+#logo_link {
+    padding-top: 5px;
+}
+.icon {
+    padding-top: 10px;
+}
+.msg {
+    padding: 35px;
+}
+footer {
+    padding: 25px 50px;
+    margin-top: 200px;
+}
+footer .social img {
+    padding-top: 15px;
+}
+.rivers-card {
+    margin: 200px 0;
+    border: 10 px solid #540B0E;
+}
+.camping-card {
+    margin: 200px 0;
+    border: 10 px solid #540B0E;
+}
+.rapids-card {
+    margin: 200px 0;
+    border: 10 px solid #540B0E;
+}
+.card-img {
+    border: 10 px solid #540B0E;
+}
+main section img {
+    box-sizing: border-box;
 }
