--- a/wrr/styles/style.css
+++ b/wrr/styles/style.css
@@ -9,6 +9,12 @@
 }
 #background{
     height: 725px;
+    grid-column: 1/11;
+    grid-row: 4/9;
+}
+.main, .home-grid {
+    display: grid;
+    grid-template-columns: repeat(10, 1fr);
 }
 body {
     background-color: #FFF3B0;
@@ -22,6 +28,12 @@ h2 {
 header {
     background-color: #335C67;
     font-family: Arial, Helvetica, sans-serif;
+    display: grid;
+    grid-template-columns: 150px auto;
+}
+nav {
+    display: flex;
+    justify-content: space-around;
 }
 nav a:hover {
     background-color: #540B0E;
@@ -31,6 +43,24 @@ nav a:hover {
 }
 #hero-img{
     width: 100%;
+}
+#hero {
+    display: grid;
+    grid-template-columns: 1fr 3fr 1fr;
+    margin-top: -100px; 
+}
+#hero-box {
+    grid-column: 1/4;
+    grid-row: 1/3;
+    z-index: -1;
+}
+#hero-msg h4 {
+    color: white;
+}
+#hero-msg {
+    grid-column: 2/3;
+    grid-row: 1/2;
+    margin-top: 100px;
 }
 nav a{
     text-decoration: none;
@@ -63,9 +93,13 @@ footer p a:hover{
 .msg p {
     font-size: .8em;
     padding-bottom: 15px;
+    grid-column: 6/10;
+    grid-row: 6/7;
 }
 #logo_link {
     padding-top: 5px;
+    justify-self: center;
+    align-self: center;
 }
 .icon {
     padding-top: 10px;
@@ -76,6 +110,9 @@ footer p a:hover{
 footer {
     padding: 25px 50px;
     margin-top: 200px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
 }
 footer .social img {
     padding-top: 15px;
@@ -83,17 +120,30 @@ footer .social img {
 .rivers-card {
     margin: 200px 0;
     border: 10 px solid #540B0E;
+    grid-column: 2/4;
+    grid-row: 2/3;
 }
 .camping-card {
     margin: 200px 0;
     border: 10 px solid #540B0E;
+    grid-column: 5/7;
+    grid-row: 2/3;
 }
 .rapids-card {
     margin: 200px 0;
     border: 10 px solid #540B0E;
+    grid-column: 8/10;
+    grid-row: 2/3;
 }
 .card-img {
     border: 10 px solid #540B0E;
+}
+.card-img, .mountains {
+    width: 100%;
+}
+.mountains {
+    grid-column: 2/7;
+    grid-row: 5/8;
 }
 main section img {
     box-sizing: border-box;
