--- a/rane&rowe/site-paln.css
+++ b/rane&rowe/site-paln.css
@@ -12,7 +12,7 @@ Fonts are separated by a | */
 
   /* change the values below to your chosen font(s) */
   --heading-font: "IM Fell French Canon SC";
-  --paragraph-font: Lato, Helvetica, sans-serif;
+  --paragraph-font: Arial, Helvetica, sans-serif;
 
   /* these colors below should be chosen from among your palette colors above */
   --headline-color-on-white: #396E94;  /* headlines on a white background */ 
@@ -41,7 +41,7 @@ img {
   margin: 0 auto;
 }
 h1, h2, h3, h4, h5, h6 {
-  font-family: var(--heading-font);
+  font-family: Arial, Helvetica, sans-serif;
   color: var(--headline-color-on-white);
 }
 h2 {
@@ -57,13 +57,14 @@ header {
   text-align: center;
   color: var(--headline-color-on-color);
   background-color: var(--paragraph-background-color);
+  font-family: Arial, Helvetica, sans-serif;
 }
 header > h1, header > h2 {
   color: var(--headline-color-on-color);
 }
 
 p {
-  font-family: var(--paragraph-font);
+  font-family: Arial, Helvetica, sans-serif;
   color: var(--paragraph-color-on-white);
   padding: 1em;
 }
